# RookieNotes

./: .gitignore  C++多线程.md  C++语言的单元测试与代码覆盖率.md  LICENSE  LevelDB 源码分析.md  Linux进程.md  README.md  Thread.md  VS中运行库的解释.md  char和unsigned char.md  cmake 添加第三方库.md  dataclass.md  file-index.json  size_t.md  spdlog 源码分析.md  命令行的艺术.md  基于doxygen的C++注释规范.md  如何学习和阅读代码.md  编写类 String.md  预定义宏.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  workspace  workspace.json
C++/: C++ 多线程.md  C++依赖关系分析工具.md  C++多线程-旧.md  C++多线程.md  C++强制类型转换运算符.md  C++语言的单元测试与代码覆盖率.md  Chrono.md  OpenMP.md  POD.md  Pimpl 与 unique_ptr.md  STL容器概览.md  Unicode 转换 UTF-8.md  Visual Studio 二进制兼容性.md  Windows UTF-8方案实践.md  Windows 判断进程是否正在运行.md  Windows设置UTF-8编码.md  __cplusplus宏.md  atomic 赋值操作是否为原子操作.md  atomic.md  cctype.md  conditional.md  conjunction.md  decay.md  declval.md  filesystem.md  hash.md  if 初始化临时变量.md  if初始化临时变量.md  is_invocable_v.md  jthread.md  lambda 表达式实现原理.md  optional.md  pragma.md  string、const char※、 char※ 、char[]相互转换.md  三路比较运算符.md  代用运算符.md  任意类型的转换.md  内存对齐.md  分析编译过程耗时.md  动态库导出符号预定义宏.md  (+21 more)
CMake/: CMAKE_BUILD_TYPE.md  CMake 工作原理.md  CMake 案例.md  CMake 生成文件解析.md  CMake 设置版本号.md  CMakePrintHelpers.md  CPack.md  FetchContent.md  Linux 安装最新版本CMake.md  PUBLIC、PRIVATE、INTERFACE.md  add_compile_definitions.md  add_custom_command.md  add_executable.md  add_library.md  cmake.md  find_program 查找应用.md  if条件.md  message.md  option.md  policy.md  target_link_directories.md  target_sources.md  判断系统平台.md  变量.md  指定编译器UTF-8编码.md  指定编译架构.md  显示可视化依赖图.md  构建和链接静态库和动态库.md  添加第三方库.md  添加编译链接选项.md  相关资料.md  编译macOS universal库.md  编译构建.md  设置库和可执行文件输出路径.md  (+2 more)
Code/LearnOpenGL/: .gitignore  CMakeLists.txt  shaders_class.ilk  vcpkg.json
Code/LearnOpenGL/01-HelloWindow/: CMakeLists.txt  hello_window.cpp
Code/LearnOpenGL/02-Triangle/: CMakeLists.txt  triangle.cpp  triangle_1.cpp  triangle_practice1.cpp  triangle_practice2.cpp  triangle_practice3.cpp
Code/LearnOpenGL/03-Shader/: CMakeLists.txt  query_vertex_attribute.cpp  shader.cpp  shader_1.cpp  shader_p3.fs  shader_practice1.cpp  shader_practice2.cpp  shader_practice3.cpp  shader_s.h  shader_uniform.cpp  shaders_class.cpp  shaders_interpolation.cpp
Code/LearnOpenGL/04-Texture/: CMakeLists.txt  shader_s.h  texture.cpp  texture1.cpp  texture1.fs  texture2.cpp  texture2.fs
Code/LearnOpenGL/05-Transformations/: CMakeLists.txt  shader_s.h  transform.cpp  transform1.cpp
(+228 files in other folders)
